# vyatta-upnp

./: Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  rules  vyatta-upnp.postinst
lib/Vyatta/: Upnp.pm
scripts/system/: ubnt-upnp2-clear  ubnt-upnp2-show  ubnt-upnp2.pl  upnp-interface-config.pl
templates-cfg/service/upnp/: node.def
templates-cfg/service/upnp/listen-on/: node.def
templates-cfg/service/upnp/listen-on/node.tag/outbound-interface/: node.def
templates-cfg/service/upnp2/: node.def
templates-cfg/service/upnp2/acl/: node.def
templates-cfg/service/upnp2/acl/rule/: node.def
templates-cfg/service/upnp2/acl/rule/node.tag/action/: node.def
templates-cfg/service/upnp2/acl/rule/node.tag/external-port/: node.def
templates-cfg/service/upnp2/acl/rule/node.tag/local-port/: node.def
templates-cfg/service/upnp2/acl/rule/node.tag/subnet/: node.def
templates-cfg/service/upnp2/bit-rate/: node.def
templates-cfg/service/upnp2/bit-rate/down/: node.def
templates-cfg/service/upnp2/bit-rate/up/: node.def
templates-cfg/service/upnp2/listen-on/: node.def
templates-cfg/service/upnp2/nat-pmp/: node.def
templates-cfg/service/upnp2/port/: node.def
templates-cfg/service/upnp2/secure-mode/: node.def
templates-cfg/service/upnp2/wan/: node.def
templates-op/clear/upnp2/: node.def
templates-op/clear/upnp2/rules/: node.def
templates-op/show/upnp2/: node.def
templates-op/show/upnp2/rules/: node.def
